errors in vertual environments are fixed

--- a/templates/result.html
+++ b/templates/result.html
@@ -22,7 +22,7 @@
                        <table>
                         <tbody>
                             <tr>
-                                <td>Link:</td><td> <textarea id="url">{{url}}</textarea><td><img src="static/copy.png" id="btn" alt="Copy Url" height="30px" onclick="copytext()"/></td></td>
+                                <td>Link:</td><td> <textarea id="url">{{url}}</textarea><td><img src="/static/copy.png" id="btn" alt="Copy Url" height="30px" onclick="copytext()"/></td></td>
                             </tr>
                         </tbody>
                        </table>
