Added Favicon NAd Title

--- a/templates/editLink.html
+++ b/templates/editLink.html
@@ -4,8 +4,9 @@
             <meta charset="UTF-8">
             <meta http-equiv="X-UA-Compatible" content="IE=edge">
             <meta name="viewport" content="width=device-width, initial-scale=1.0">
-            <title>Short Url</title>
+            <title>595 Url Shortner</title>
             <link rel="stylesheet" href="/static/index.css">
+            <link rel="shortcut icon" href="/static/favicon.png" type="image/x-icon">
 {% if  logged%}
 <script>
     setTimeout(()=>{
