--- a/templates/editLink.html
+++ b/templates/editLink.html
@@ -17,12 +17,9 @@
         </head>
         <body>
             <button id="LoginBtn" onclick="window.location.href='/Logout'" class="RightAlign Button">Logout</button>
-            <button id="SignupBtn" onclick="window.location.href='/changepassword'" class="RightAlign Button">Change Password</button><br/><br/>
+            <button id="SignupBtn" onclick="window.location.href='/changepassword'" class="RightAlign Button">Change Password</button>
+            <button id="LoginBtn" onclick="window.location.href='/'" class="RightAlign Button">Home</button><br/><br/>
             <h1 id="appName" class="centerElem centerText" onclick="window.location.href='/'">595 Url Shortner</h1>
-            <p id="title">
-                To save your URLs permanently, log in to your account. 
-                This allows you to edit the destination URL of any links you create after logging in,
-                 ensuring that your links always lead to the right place.</p>
                 <div id="shortUrl">
                     {% with messages = get_flashed_messages() %}
                     {% if messages %}
@@ -41,10 +38,6 @@
                         </tbody>
                        </table>
                     </form>
-                </div>
-            <p id="bottomDesc">Create a permanent link that never expires or gets deleted, even for frequently changing URLs.
-                 With this feature, you can easily change the destination URL at any time, 
-                 ensuring that your links always lead to the right place</p>
-        
+                </div>        
         </body>
         </html>
