--- a/static/index.css
+++ b/static/index.css
@@ -20,7 +20,7 @@
     display: block;
     margin-top: 20px;
     text-decoration: underline 1px;
-    background-color: rgb(195, 195, 254);
+    background-color: rgba(0, 110, 255, 0.254);
     padding-top: 10px;
     padding-bottom: 10px;
     border-radius: 10px;
@@ -29,15 +29,16 @@
 #title{
     text-align: center;
     margin: auto;
-    margin-top: 20px;
+    margin-top: 30px;
     font-size: 18px;
-    max-width: 100%;
+    width: 60%;
+    background-color: #f5f5f5;
 }
-#shortUrl{
+#shortUrl,#changePass{
     margin: auto;
     margin-top: 50px;
     width: max-content;
-    background-color: rgb(245, 215, 208);
+    background-color: #597e6574;
     padding: 30px;
     border-radius: 10px;
     max-width: 100%;
@@ -47,12 +48,14 @@
     margin: auto;
     margin-top: 40px;
     border: 1px solid;
-    background-color: rgb(154, 186, 241);
+    background-color: #c6d1e2d1;
 }
 #bottomDesc {
+    margin: auto;
     margin-top: 50px;
     text-align: center;
     padding: 10px;
+    width: 60%;
     background-color: #f5f5f5;
   }
 #urlInput{
@@ -62,15 +65,15 @@
     text-align: center;
     font-size: 18px;
     color:black;
-    background-color: rgb(242, 222, 207);
+    background-color: #597e6574;
     border-radius: 10px;
     margin-top: 20px;
 }
 ::placeholder {
-    color: #505768;
     font-size: 18px;
     letter-spacing: 1px;
     word-spacing: 2px;
+    color: #faf6ed;
   }
 .inputText{
     outline: none;
@@ -79,7 +82,7 @@
     text-align: center;
     font-size: 18px;
     color:black;
-    background-color: rgb(211, 178, 153);
+    background-color: #95ad9cba;
     border-top-right-radius: 3px;
     border-top-left-radius: 3px;
     margin-top: 20px;
@@ -103,6 +106,10 @@
 #mobileTable{
     display: none;
 }
+body{
+    margin-left: 20px;
+    margin-right: 20px;
+}
 @media only screen and (max-width: 500px) {
     #savedLinks{
         display: none;
@@ -111,6 +118,28 @@
         display: block;
         margin-top: 100px;
     }
+    #appName{
+        width: 100%;
+    }
+    #shortUrl{
+        max-width: 80%;
+    }
+    #changePass table{
+        max-width: 80%;
+    }
+    .inputText{
+        width: 100%;
+    }
+    ::placeholder {
+        color: #505768;
+        font-size: 13px;
+      }
+    #title{
+        width: 90%;
+    }
+    #bottomDesc{
+        width: 90%;
+    }
   }
 #mobileTable table{
     border: 1px solid;
@@ -118,4 +147,27 @@
     overflow: hidden;
     max-width: 100%;
     margin: auto;
+}
+#shortUrl table,#changePass table{
+    text-align: right;
+}
+#shortUrl td,#changePass td{
+    vertical-align: bottom;
+}
+textarea{
+    background-color: #a1bd9e;
+    outline: none;
+    border: none;
+    resize: none;
+    color: black;
+}
+button{
+    height: 25px;
+    border: none;
+    border-radius: 10px;
+    color: black;
+    background-color: #f5d8d861;
+}
+.imgBtn{
+    cursor: pointer;
 }
