Change Password Ui Fixed

--- a/static/index.css
+++ b/static/index.css
@@ -132,7 +132,7 @@ textarea{
     #shortUrl{
         max-width: 80%;
     }
-    #changePass table{
+    #changePass{
         max-width: 80%;
     }
     .inputText{
