Edited Place Holder text and resetpassword endpoint

--- a/templates/resetPassword.html
+++ b/templates/resetPassword.html
@@ -7,16 +7,25 @@
             <title>595 Url Shortner</title>
             <link rel="stylesheet" href="/static/index.css">
             <link rel="shortcut icon" href="/static/favicon.png" type="image/x-icon">
+            {% if  logged%}
+            <script>
+                setTimeout(()=>{
+                    window.location.href="/"
+                    document.getElementById("resultmsg").style += "color:green";
+                },800)
+            </script>
+            {% endif %}
         </head>
         <body>
             <button id="LoginBtn" onclick="window.location.href='/login'" class="RightAlign Button">Login</button>
             <button id="SignupBtn" onclick="window.location.href='/signup'" class="RightAlign Button">Signup</button><br/><br/>
             <h1 id="appName" class="centerElem centerText" onclick="window.location.href='/'">595 Url Shortner</h1>
-            <p id="title">
-                To save your URLs permanently, log in to your account. 
-                This allows you to edit the destination URL of any links you create after logging in,
-                 ensuring that your links always lead to the right place.</p>
                 <div id="shortUrl">
+                    {% with messages = get_flashed_messages() %}
+                    {% if messages %}
+                    <h4 id="resultmsg"class="centerText">{{messages[-1]}}</h4>
+                    {% endif %}
+                    {% endwith %}
                     <form method="post">
                        <table>
                         <tbody>
