--- a/static/index.css
+++ b/static/index.css
@@ -1,3 +1,11 @@
+body{
+    background-image: url(5127031.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    z-index: 0;
+    background-blend-mode: screen;
+    height: 100vh;
+}
 .centerText{
     text-align: center;
 }
@@ -20,7 +28,7 @@
     display: block;
     margin-top: 20px;
     text-decoration: underline 1px;
-    background-color: rgba(0, 110, 255, 0.254);
+    background-color: rgba(128, 170, 225, 0.85);
     padding-top: 10px;
     padding-bottom: 10px;
     border-radius: 10px;
@@ -42,6 +50,7 @@
     padding: 30px;
     border-radius: 10px;
     max-width: 100%;
+    box-shadow: 0 8px 25px 5px rgba(2, 2, 2, 0.765);
 }
 #shortBtn{
     font-size: 15px;
@@ -56,7 +65,9 @@
     text-align: center;
     padding: 10px;
     width: 60%;
-    background-color: #f5f5f5;
+    border: 1px solid;
+    border-radius: 10px;
+    background-color: #f5f5f536;
   }
 #urlInput{
     outline: none;
